# logic

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  test.cc  test.ixx
logicpp/: CMakeLists.txt  mod.ixx
logicpp/unit/: eknow.ixx  formula.cc  formula.ixx  mod.ixx  num.cc  num.ixx
